fix-typo - fix typo in template

--- a/templates/config.yml.j2
+++ b/templates/config.yml.j2
@@ -13,7 +13,7 @@ next_adds_job: {{ OXIDIZED_NEXT_ADDS_JOB }}
 rest_hide_enable: {{ OXIDIZED_HIDE_SECRETS }}
 vars: 
   remove_secret: {{ OXIDIZED_HIDE_SECRETS }}
-{% if OXIDIZED_HIDE_SECRETS_IOS_RBAC | lenght > 0 %}
+{% if OXIDIZED_HIDE_SECRETS_IOS_RBAC | length > 0 %}
   ios_rbac: {{ OXIDIZED_HIDE_SECRETS_IOS_RBAC }}
 {% endif %}
 
