fix-typo - fix typo in template

--- a/templates/config.yml.j2
+++ b/templates/config.yml.j2
@@ -20,7 +20,7 @@ vars:
 {% if OXIDIZED_SSH_USERNAME | length > 0 %}
 # Default SSH login
 username: {{ OXIDIZED_SSH_USERNAME }}
-{% if OXIDIZED_SSH_PASSWORD | lenght > 0 %}
+{% if OXIDIZED_SSH_PASSWORD | length > 0 %}
 password: {{ OXIDIZED_SSH_PASSWORD }}
 {% endif %}
 {% endif %}
